# skoljka

./: .gitattributes  .gitignore  .jsbeautifyrc  .pre-commit-config.yaml  Gruntfile.coffee  Gruntfile.js  LICENSE  Makefile  README.md  __init__.py  b.py  bower.json  build.py  compilemessages.sh  cypress.config.js  esbuild.mjs  makemessages.sh  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  settings.py  tsconfig.json  urls.py  wsgi.py
activity/: action.py  constants.py  models.py  urls.py  utils.py  views.py
base/: urls.py  views.py
data/: sample_data.json  tags.json
deploy/: README.md  _common.sh  bootstrap_ubuntu.sh  deploy.sh  install_nginx.sh  install_systemd.sh  set_permissions.sh
docker/: Dockerfile-16.04  Makefile  README.md  build.sh  build_internal.sh  compose.worker.yml  docker_build.sh  docker_mount.sh  docker_rsync.sh  run_mount.sh  run_rsync.sh  setup_external.sh  setup_internal.sh  worker.Dockerfile
docs/: frontend_components.md  python.md  pythonjsx-layout.md
folder/: admin.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
libs/: __init__.py  decorators.py  models.py  ncache.py  string_operations.py  tags.py  testcase.py  timeout.py
mathcontent/: __init__.py  admin.py  ajax.py  forms.py  latex.py  models.py  urls.py  utils.py  views.py
permissions/: admin.py  constants.py  models.py  urls.py  utils.py  views.py
pm/: forms.py  models.py  urls.py  views.py
post/: admin.py  generic.py  models.py  views.py
rating/: ajax.py  constants.py  fields.py  models.py  urls.py  (+2 more)
(+1026 files in other folders)
